rewrite appendix for low rank matrix completion

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
@@ -369,3 +369,21 @@
 }
 
 
+@article{watson1992characterization,
+  title={Characterization of the subdifferential of some matrix norms},
+  author={Watson, G Alistair},
+  journal={Linear algebra and its applications},
+  volume={170},
+  pages={33--45},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@book{rellich1969perturbation,
+  title={Perturbation theory of eigenvalue problems},
+  author={Rellich, Franz},
+  year={1969},
+  publisher={CRC Press}
+}
+
+
